# qa_py_poetry

./: .env  pyproject.toml
tests/: test_login.py
